<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bkViolet">

    <TextView
        android:id="@+id/introtxt"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginTop="56dp"
        android:background="@color/bkViolet"
        android:fontFamily="@font/madimi"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="20"
        android:text='@string/app_name'
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/yellow"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="584dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introtxt">

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="360dp"
            android:layout_marginStart="45dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/logintxt_registr"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/creLogintxt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/input_login"
                style="@style/Input_RK"
                android:hint="@string/creLogin"
                android:inputType="text"
                android:autofillHints="" />

            <TextView
                android:id="@+id/emailtxt"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/inputEmailtxt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/input_email"
                style="@style/Input_RK"
                android:hint="@string/inputEmail"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <TextView
                android:id="@+id/passwordtxt_registr"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/crePasswordtxt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/input_password"
                style="@style/Input_RK"
                android:hint="@string/crePassword"
                android:inputType="textPassword"
                android:autofillHints="" />

            <EditText
                android:id="@+id/input_passwordrepeat"
                style="@style/Input_RK"
                android:hint="@string/repeatPassword"
                android:inputType="textPassword"
                android:autofillHints="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="185dp"
            android:layout_marginStart="45dp"
            android:orientation="vertical"
            android:paddingTop="45dp">

            <Button
                android:id="@+id/button_registr"
                style="@style/button_RK"
                android:layout_marginStart="30dp"
                android:text="@string/reg" />

            <Button
                android:id="@+id/button_back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="258dp"
                android:layout_height="68dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/light_purple"
                android:text="@string/back"
                android:textColor="@color/yellow" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>