<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background='@color/bkViolet'
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introtxt"
        android:layout_width="368dp"
        android:layout_height="84dp"
        android:layout_marginTop="92dp"
        android:background="@color/bkViolet"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="20"
        android:text='@string/app_name'
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/yellow"
        android:textSize="65dp"
        android:fontFamily="@font/madimi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="479dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introtxt">

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="237dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logintxt"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/logintb"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="291dp"
                android:layout_height="58dp"
                android:background="@drawable/rounded_input"
                android:hint="@string/spekLogin"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginTop="5dp"
                android:paddingLeft="25dp"
                android:paddingTop="2dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/passwordtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/passwordtb"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="291dp"
                android:layout_height="58dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="25dp"
                android:paddingTop="2dp"
                android:textColor="@color/white"
                android:hint="@string/spekPass" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="185dp"
            android:layout_marginStart="45dp"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <Button
                android:id="@+id/btnAuth"
                android:layout_width="258dp"
                android:layout_height="61dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/light_purpleButton"
                android:elevation="6dp"
                android:stateListAnimator="@null"
                android:text="@string/auth"
                android:textColor="@color/yellow"
                android:translationZ="4dp" />

            <Button
                android:id="@+id/btnRegistr"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="258dp"
                android:layout_height="68dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/light_purple"
                android:text="@string/reg"
                android:textColor="@color/yellow" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
